force-app/main/default/src/objects/Loop__Document_Request__c/Loop__Document_Request__c.object-meta.xml
<CustomObject>
    <description>DocGen Queue for DocGen Packages</description>
    <label>Document Request</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Document Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocGen Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>