force-app/main/default/src/objects/Loop__Document_Request__c/fields/Loop__Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Loop__Document_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Name (text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>