force-app/main/default/src/objects/Loop__Document_Request__c/fields/Loop__Email_Link__c.field-meta.xml
<CustomField>
    <fullName>Loop__Email_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Link</label>
    <type>TextArea</type>
</CustomField>