force-app/main/default/src/objects/Loop__Document_Request__c/fields/Loop__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Loop__Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>