force-app/main/default/src/objects/Loop__Document_Request__c/fields/Loop__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Loop__Object_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>